src/components/hero/Hero.scss
/*
      SPACING SYSTEM (px)
      2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
      FONT SIZE SYSTEM (px)
      10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

      
      MAIN COLOR: ?
      GREY COLOR: ?
*/

.hero {
  min-height: 90vh;
  padding: 4.8rem 0 9.6rem 0;
  background: #e03131;

  .heading-primary {
    font-size: 5.2rem;
    font-weight: 700;
    line-height: 1.2;
    color: #fff;
  }

  &__description {
    font-size: 2.2rem;
    line-height: 1.6;
    color: #fef2f2;
    margin-bottom: 4.8rem;
    letter-spacing: 0.5px;
    font-weight: 400;
  }

  &__img-box {
    display: flex;
    justify-content: flex-end;
  }

  &__img {
    display: inline-block;
    width: 75%;
    height: 50rem;
    border-radius: 50px 0 50px;
    object-fit: cover;
  }

  // Buttons
  .btns {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 2.2rem;

    .btn--secondary {
      color: #110303;
      background-color: #fef2f2;
      border: 1px solid #e03131;
      transition: all 0.3s;

      &:hover {
        background-color: #fbd0d0;
      }
    }
  }
}

.header {
  position: sticky;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2.4rem 4.8rem;
  background: #e03131;

  .logo {
    .logo__image {
      width: 12rem;
    }
  }
}

.nav {
  &__list {
    display: flex;
    align-items: center;
    list-style: none;
    gap: 4.4rem;
  }

  &__link {
    font-size: 1.8rem;
    font-weight: 400;
    color: #fff;
  }

  .contact {
    font-weight: 500;
    font-size: 2rem;
  }
}

.lang {
  display: flex;
  gap: 1.2rem;

  &__btn {
    background: none;
    border: none;
    cursor: pointer;
    border-radius: 50%;
    border: 3px solid rgba(255, 255, 255, 0.75);
    height: 4rem;
    width: 4rem;
    overflow: hidden;

    img {
      height: 100%;
      width: 100%;
      transform: scale(1.25);
    }
  }
}

